[package]
name = "yew-nested-router"
description = "A router for Yew which supports nesting"
version = "0.3.0"
edition = "2021"
authors = ["Jens Reimann <jreimann@redhat.com>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/yew-nested-router"
categories = ["wasm", "web-programming", "gui"]
keywords = ["yew", "router", "nested", "web", "html"]
readme = "README.md"
rust-version = "1.60"

[dependencies]
gloo-history = "0.1.2"
gloo-utils = "0.1.6"
log = "0.4"
urlencoding = "2"
wasm-bindgen = "0.2"
yew = "0.20"

yew-nested-router-macros = { version = "0.2.0", path = "yew-nested-router-macros" }

web-sys = { version = "0.3", features = [
    "HtmlBaseElement",
    "Navigator"
] }
