[package]
name = "yew-nested-router"
description = "A router for Yew which supports nesting"
version = "0.6.1"
edition = "2021"
authors = ["Jens Reimann <jreimann@redhat.com>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/yew-nested-router"
categories = ["wasm", "web-programming", "gui"]
keywords = ["yew", "router", "nested", "web", "html"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
gloo-utils = "0.2"
gloo-events = "0.2"
js-sys = "0.3"
log = "0.4"
serde = "1"
serde_json = "1"
urlencoding = "2"
wasm-bindgen = "0.2"
yew = "0.21"

yew-nested-router-macros = { version = "0.6.1", path = "yew-nested-router-macros" }

web-sys = { version = "0.3", features = [
    "HtmlBaseElement",
    "Navigator"
] }

[workspace.metadata.release]
tag-name = "v{{version}}"
